force-app/main/default/objects/Monte_Carlo_Result__c/Monte_Carlo_Result__c.object-meta.xml
<CustomObject>
    <label>Monte Carlo Result</label>
    <nameField>
        <label>Simulation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monte Carlo Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>