force-app/main/default/objects/Monte_Carlo_Result__c/fields/Conditional_VaR_5__c.field-meta.xml
<CustomField>
    <fullName>Conditional_VaR_5__c</fullName>
    <label>Conditional VaR 5%</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>