force-app/main/default/objects/Monte_Carlo_Result__c/fields/Expected_ROI__c.field-meta.xml
<CustomField>
    <fullName>Expected_ROI__c</fullName>
    <label>Expected ROI</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>