force-app/main/default/objects/Monte_Carlo_Result__c/fields/Iterations__c.field-meta.xml
<CustomField>
    <fullName>Iterations__c</fullName>
    <label>Iterations</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>