force-app/main/default/objects/Monte_Carlo_Result__c/fields/Probability_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Probability_of_Loss__c</fullName>
    <label>Probability of Loss</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>