force-app/main/default/objects/Monte_Carlo_Result__c/fields/ROI_Standard_Deviation__c.field-meta.xml
<CustomField>
    <fullName>ROI_Standard_Deviation__c</fullName>
    <label>ROI Standard Deviation</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>