force-app/main/default/objects/Monte_Carlo_Result__c/fields/Scenario_Type__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Type__c</fullName>
    <label>Scenario Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baseline</fullName>
            </value>
            <value>
                <fullName>Economic_Downturn</fullName>
                <label>Economic Downturn</label>
            </value>
            <value>
                <fullName>Peak_Season</fullName>
                <label>Peak Season</label>
            </value>
            <value>
                <fullName>Summer_Low</fullName>
                <label>Summer Low</label>
            </value>
            <value>
                <fullName>Increased_Competition</fullName>
                <label>Increased Competition</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>