force-app/main/default/objects/Monte_Carlo_Result__c/fields/Simulation_Date__c.field-meta.xml
<CustomField>
    <fullName>Simulation_Date__c</fullName>
    <label>Simulation Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>