force-app/main/default/objects/Monte_Carlo_Result__c/fields/Simulation_ID__c.field-meta.xml
<CustomField>
    <fullName>Simulation_ID__c</fullName>
    <externalId>true</externalId>
    <label>Simulation ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>