force-app/main/default/objects/Monte_Carlo_Result__c/fields/Target_Budget__c.field-meta.xml
<CustomField>
    <fullName>Target_Budget__c</fullName>
    <label>Target Budget</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>