force-app/main/default/objects/Monte_Carlo_Result__c/fields/Upside_Potential_95__c.field-meta.xml
<CustomField>
    <fullName>Upside_Potential_95__c</fullName>
    <label>Upside Potential 95%</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>