force-app/main/default/objects/Monte_Carlo_Result__c/fields/Value_at_Risk_5__c.field-meta.xml
<CustomField>
    <fullName>Value_at_Risk_5__c</fullName>
    <label>Value at Risk 5%</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>